# sputnik

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker.sh
cmake/: Dependencies.cmake
sputnik/: CMakeLists.txt  logging.cc  logging.h  matrix_utils.cu.cc  matrix_utils.h  sputnik.h  test_utils.h  timer.cu.cc  timer.h  type_utils.h
sputnik/block/: arguments.h  matrix_utils.cu  matrix_utils.cu.cc  matrix_utils.h
sputnik/block/bdsd/: CMakeLists.txt  bdsd_benchmark.cu.cc  bdsd_test.cu.cc  cuda_bdsd.cu.cc  cuda_bdsd.h  gemm_test.cu.cc
sputnik/block/bdsd/cutlass/: cuda_bdsd.h  dsd.cu.cc  gemm.cu.cc  gemm_128x256_32x3_nt_align8.cu.cc
sputnik/block/bdsd/sm80/: bdsd_b32_m32n128k32_h8_h8.cu.cc  bdsd_b32_m32n64k32_h8_h8.cu.cc  cuda_bdsd.cu.cc  cuda_bdsd.h
sputnik/block/bitmask/: bit_matrix.h  bitmask.cu  bitmask.cu.cc  bitmask.h
sputnik/block/cutlass/: CMakeLists.txt  block_gemm.h  block_mma.h  block_pitch_linear.h  block_size.h  block_tile_access_iterator.h  block_tile_output_iterator.h  block_tile_union_iterator.h  default_block_epilogue.h  default_block_gemm.h  dependent_tile_access_iterator.h  index_merge.h  kernel.h  op.h  threadblock_swizzle.h  type_utils.h
sputnik/block/dds/: CMakeLists.txt  dds.cu  dds.cu.cc  dds.h  dds_benchmark.cu.cc  dds_test.cu.cc
sputnik/block/dds/cutlass/: CMakeLists.txt  dds.cu.cc  dds.h  dds_mixed_b128_256x128x32x3_nn_align8.cu  dds_mixed_b128_256x128x32x3_nn_align8.cu.cc  dds_mixed_b128_256x128x32x3_nt_align8.cu.cc  dds_mixed_b128_256x128x32x3_tn_align8.cu.cc  dds_mixed_b128_256x128x32x3_tt_align8.cu  dds_mixed_b128_256x128x32x3_tt_align8.cu.cc
sputnik/block/dsd/: CMakeLists.txt  dsd.cu  dsd.cu.cc  dsd.h  dsd_benchmark.cu  dsd_benchmark.cu.cc  dsd_test.cu  dsd_test.cu.cc
sputnik/block/dsd/cutlass/: dsd.cu  dsd.cu.cc  dsd.h  dsd_mixed_b128_128x256x32x3_nn_align8.cu  dsd_mixed_b128_128x256x32x3_nn_align8.cu.cc  dsd_mixed_b128_128x256x32x3_nt_align8.cu  dsd_mixed_b128_128x256x32x3_nt_align8.cu.cc  dsd_mixed_b128_128x256x32x3_tn_align8.cu  dsd_mixed_b128_128x256x32x3_tn_align8.cu.cc  dsd_mixed_b128_128x256x32x3_tt_align8.cu  dsd_mixed_b128_128x256x32x3_tt_align8.cu.cc
sputnik/block/dsd/sm80/: CMakeLists.txt  dsd.cu.cc  dsd.h  dsd_b32_m32n128k32_h8_h8.cu.cc  dsd_b32_m32n64k32_h8_h8.cu.cc
sputnik/block/dss/: #dss_test.cu.cc#  CMakeLists.txt  dss.cu  dss.cu.cc  dss.h  dss_benchmark.cu.cc  dss_test.cu  dss_test.cu.cc
sputnik/block/dss/cutlass/: dss.cu.cc  dss.h  dss_mixed_b128_128x128x32x5_nn_align8.cu  dss_mixed_b128_128x128x32x5_nn_align8.cu.cc  dss_mixed_b128_128x128x32x5_nt_align8.cu  dss_mixed_b128_128x128x32x5_nt_align8.cu.cc  dss_mixed_b128_128x128x32x5_tn_align8.cu.cc  dss_mixed_b128_128x128x32x5_tt_align8.cu  dss_mixed_b128_128x128x32x5_tt_align8.cu.cc
sputnik/block/row_indices/: CMakeLists.txt  row_indices.cu  row_indices.cu.cc  row_indices.h
sputnik/block/sdd/: CMakeLists.txt  sdd.cu.cc  sdd.h  sdd_benchmark.cu.cc  sdd_test.cu.cc
sputnik/block/sdd/cutlass/: sdd.cu  sdd.cu.cc  sdd.h  sdd_mixed_b128_128x128x32x5_nn_align8.cu.cc  sdd_mixed_b128_128x128x32x5_nt_align8.cu.cc  sdd_mixed_b128_128x128x32x5_tn_align8.cu.cc  sdd_mixed_b128_128x128x32x5_tt_align8.cu.cc  sdd_mixed_b128_128x256x32x3_nn_align8.cu.cc
sputnik/block/sds/: CMakeLists.txt  sds.cu.cc  sds.h  sds_benchmark.cu.cc  sds_test.cu  sds_test.cu.cc
sputnik/block/sds/cutlass/: sds.cu.cc  sds.h  sds_mixed_b128_128x128x32x5_nn_align8.cu.cc  sds_mixed_b128_128x128x32x5_nt_align8.cu  sds_mixed_b128_128x128x32x5_nt_align8.cu.cc  sds_mixed_b128_128x128x32x5_tn_align8.cu.cc  sds_mixed_b128_128x128x32x5_tt_align8.cu  sds_mixed_b128_128x128x32x5_tt_align8.cu.cc
sputnik/block/ssd/: CMakeLists.txt  ssd.cu  ssd.h  ssd_benchmark.cu  ssd_benchmark.cu.cc  ssd_test.cu.cc
sputnik/block/ssd/cutlass/: ssd.cu.cc  ssd.h  ssd_mixed_b128_128x128x32x5_nn_align8.cu  ssd_mixed_b128_128x128x32x5_nn_align8.cu.cc  ssd_mixed_b128_128x128x32x5_nt_align8.cu.cc  ssd_mixed_b128_128x128x32x5_tn_align8.cu.cc  ssd_mixed_b128_128x128x32x5_tt_align8.cu  ssd_mixed_b128_128x128x32x5_tt_align8.cu.cc
sputnik/block/transpose/: CMakeLists.txt  transpose.cu.cc  transpose.h
sputnik/depthwise/: cuda_depthwise.cu.cc
